--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <center>
-        <h1>Domain for sale, contact <a href="mailto:jamesleu96@gmail.com">jamesleu96<span>@</span>gmail.com</a></a></h1>
-        <h1>此域名出售，有意者请联系 <a href="mailto:jamesleu96@gmail.com">jamesleu96<span>@</span>gmail.com</a></a></h1>
+        <h1>Domain for sale, contact <a href="mailto:jamesleu96@gmail.com?subject=BEEBIKE.COM">jamesleu96<span>@</span>gmail.com</a></a></h1>
+        <h1>此域名出售，有意者请联系 <a href="mailto:jamesleu96@gmail.com?subject=BEEBIKE.COM">jamesleu96<span>@</span>gmail.com</a></a></h1>
     </center>
 </body>
 </html>
