--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>BEEBIKE.COM</title>
+  <meta charset="UTF-8">
+  <title>BEEBIKE.COM</title>
 </head>
 <body>
-    <center>
-        <h1>Domain for sale, contact <a href="mailto:jamesleu96@gmail.com?subject=BEEBIKE.COM">jamesleu96<span>@</span>gmail.com</a></a></h1>
-        <h1>此域名出售，有意者请联系 <a href="mailto:jamesleu96@gmail.com?subject=BEEBIKE.COM">jamesleu96<span>@</span>gmail.com</a></a></h1>
-    </center>
+  <center>
+    <h1>Domain for sale, contact <a href="mailto:j@jamesliu.info?subject=BEEBIKE.COM">j<span>@</span>jamesliu.info</a></h1>
+    <h1>此域名出售，有意者请联系 <a href="mailto:j@jamesliu.info?subject=BEEBIKE.COM">j<span>@</span>jamesliu.info</a></h1>
+  </center>
 </body>
 </html>
