--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>BEEBIKE.COM</title>
 </head>
 <body>
-  <center>
-    <h1>Domain for sale, contact <a href="mailto:j@jamesliu.info?subject=BEEBIKE.COM">j<span>@</span>jamesliu.info</a></h1>
-    <h1>此域名出售，有意者请联系 <a href="mailto:j@jamesliu.info?subject=BEEBIKE.COM">j<span>@</span>jamesliu.info</a></h1>
-  </center>
+<center>
+  <h1>Domain for sale, contact <a onclick="this.href='mailto:'+atob('akBqYW1lc2xpdS5pbmZv')+'?subject=BEEBIKE.COM'"><script>document.write(atob('akBqYW1lc2xpdS5pbmZv'));</script></a></h1>
+  <h1>此域名出售，有意者请联系 <a onclick="this.href='mailto:'+atob('akBqYW1lc2xpdS5pbmZv')+'?subject=BEEBIKE.COM'"><script>document.write(atob('akBqYW1lc2xpdS5pbmZv'));</script></a></h1>
+</center>
 </body>
 </html>
